--- a/RealEstate.Presentation.WebApi/appsettings.json
+++ b/RealEstate.Presentation.WebApi/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Seed": {
+    "FilePath": "Seed/properties-seed.json",
+    "FallbackImage": "src/assets/images/placeholder-property.webp",
+    "ValidateImages": true,
+    "MaxParallelChecks": 8,
+    "HeadTimeoutSeconds": 2
+  }
 }
