--- a/RealEstate.Infrastructure.Persistence/RealEstate.Infrastructure.Persistence.csproj
+++ b/RealEstate.Infrastructure.Persistence/RealEstate.Infrastructure.Persistence.csproj
@@ -22,6 +22,11 @@
   <ItemGroup>
     <ProjectReference Include="..\RealEstate.Application\RealEstate.Application.csproj" />
     <ProjectReference Include="..\RealEstate.Domain\RealEstate.Domain.csproj" />
+    <ProjectReference Include="..\RealEstate.Infrastructure.Common\RealEstate.Infrastructure.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
