--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=realstate-api001-bqf3d6dubhd9htdm.centralus-01.azurewebsites.net
+VITE_API_URL=realstate-api001-bqf3d6dubhd9htdm.centralus-01.azurewebsites.net/api
